# src/Consilient.Data.GraphQL/Models/DailyLogVisitsResult.cs
@@ -1,0 +1,9 @@
+namespace Consilient.Data.GraphQL.Models;
+
+public class DailyLogVisitsResult
+{
+    public DateOnly Date { get; set; }
+    public int FacilityId { get; set; }
+    public List<DailyLogProvider> Providers { get; set; } = [];
+    public List<DailyLogVisit> Visits { get; set; } = [];
+}
